# Cpp-second-cource

./: Date.cpp  FiniteField(easy).cpp  PrimeNumberGenerator.cpp  README.md  Set.cpp
1/BuffReader/: buffered_reader.h  main.cpp
1/Date/: date.h  main.cpp
1/FinField (e)/: main.cpp  num.cpp  num.h
1/FinField(h)/: main.cpp  num.cpp  num.h
1/PrimeNumGen/: main.cpp
1/Set/: main.cpp
cmplx&rtnl/: CMakeLists.txt  ComplexNums.h  RationalNums.h  catch.hpp  main.cpp
